--- a/index.html
+++ b/index.html
@@ -3,72 +3,166 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home | Casa Verde</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@900&family=Montserrat:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/base/base.css">
     <link rel="stylesheet" href="./css/componentes/cabecalho.css">
-    <link rel="stylesheet" href="./css/componentes/botoes.css">
+    <link rel="stylesheet" href="./css/componentes/rodape.css">
     <link rel="stylesheet" href="./css/componentes/input.css">
+    <link rel="stylesheet" href="./css/componentes/botoes.css">
+    <link rel="stylesheet" href="./css/chamada.css">
     <link rel="stylesheet" href="./css/componentes/cartao.css">
     <link rel="stylesheet" href="./css/componentes/item.css">
+    <link rel="stylesheet" href="./css/como-conseguir.css">
+    <link rel="stylesheet" href="./css/ofertas.css">
     <link rel="stylesheet" href="./css/componentes/produto.css">
     <link rel="stylesheet" href="./css/componentes/video.css">
-    <link rel="stylesheet" href="./css/componentes/rodape.css">
-    <title>Home | Casa Verde</title>
 </head>
 
 <body>
     <header class="container cabecalho">
-        <img src="Assets/img/logo.svg" alt="Logo da Casa Verder" class="cabecalho__logo"><a href="#" aria-label="Meu carrinho"><img src="Assets/img/icones/carrinho.svg" alt="Icone do carrinho de compras" class="cabecalho__carrinho"></a></header>
-    <main class="container">
-        <button class="botao">Assinar NewsLetter</button>
-        <input type="email" class="input input--icone input--email" placeholder="Insira seu e-mail"
-            aria-label="Insira seu e-mail">
-        <button class="botao botao--alternativo">Botão Alternativo</button>
+        <img src="Assets/img/logo.svg" alt="Logo da Casa Verder" class="cabecalho__logo"><a href="#"
+            aria-label="Meu carrinho"><img src="Assets/img/icones/carrinho.svg" alt="Icone do carrinho de compras"
+                class="cabecalho__carrinho"></a>
+    </header>
 
-        <article class="cartao">
-            <h2 class="titulo alinhamento--meio">Como conseguir
-                <span class="titulo--destaque alinhamento--meio">Minha Conta</span>
+    <main>
+        <section class="chamada container">
+            <h2 class="titulo">
+                Sua casa com as
+                <span class="titulo--destaque">Melhores plantas</span>
             </h2>
-            <ul class="lista-item">
-                <li class="item">
-                    <span class="item__icone item__icone--cursor"></span>
-                    <p>Escolha suas plantas.</p>
+            <p class="chamada__texto texto">Encontre aqui uma vasta seleção de plantas para decorar a sua casa e torná-lo uma pessoa mais feliz no seu dia a dia. Entre com seu e-mail e assine nossa newsletter para saber das novidades da marca</p>
+            <img src="./Assets/img/planta-chamada.png" alt="Foto do Produto" class="chamada__imagem">
+            <form action="#" class="chamada__formulario">
+                <input type="text" class="input input--icone input--email" placeholder="Insira seu email" aria-label="Insira seu email">
+                <button class="botao">Assinar emails newsletter</button>
+            </form>
+        </section>
+        <section class="container como-conseguir">
+            <article class="cartao">
+                <h2 class="titulo alinhamento--meio">Como conseguir
+                    <span class="titulo--destaque alinhamento--meio">Minha Conta</span>
+                </h2>
+                <ul class="lista-item">
+                    <li class="item">
+                        <span class="item__icone item__icone--cursor"></span>
+                        <p>Escolha suas plantas.</p>
+                    </li>
+                    <li class="item">
+                        <span class="item__icone item__icone--carrinho"></span>
+                        <p>Faça um pedido.</p>
+                    </li>
+                    <li class="item">
+                        <span class="item__icone item__icone--caminhao"></span>
+                        <p>Aguarde na sua casa.</p>
+                    </li>
+                </ul>
+            </article>
+        </section>
+        <section class="ofertas container">
+            <h2 class="titulo alinhamento--meio">
+                Conheça nossos
+                <span class="titulo--destaque">produtos</span>
+            </h2>
+            <ul>
+                <li class="produto">
+                    <img class="produto__imagem" src="./Assets/img/produto-01.png" alt="Foto do produto"></imag>
+                    <div class="produto__conteudo">
+                        <h3 class="produto__titulo titulo--destaque">Ajuga
+                            reptans</h3>
+                        <p class="produto__preco">R$ 20,00</p>
+                        <a href="" class="produto_comprar">Comprar<span class="produto__comprar--item"></span></a>
+                    </div>
                 </li>
-                <li class="item">
-                    <span class="item__icone item__icone--carrinho"></span>
-                    <p>Faça um pedido.</p>
+                <li class="produto">
+                    <img class="produto__imagem" src="./Assets/img/produto-02.png" alt="Foto do produto"></imag>
+                    <div class="produto__conteudo">
+                        <h3 class="produto__titulo titulo--destaque">Cordyline
+                            fruticosa</h3>
+                        <p class="produto__preco">R$ 20,00</p>
+                        <a href="" class="produto_comprar">Comprar<span class="produto__comprar--item"></span></a>
+                    </div>
                 </li>
-                <li class="item">
-                    <span class="item__icone item__icone--caminhao"></span>
-                    <p>Aguarde na sua casa.</p>
+                <li class="produto">
+                    <img class="produto__imagem" src="./Assets/img/produto-03.png" alt="Foto do produto"></imag>
+                    <div class="produto__conteudo">
+                        <h3 class="produto__titulo titulo--destaque">Crassula
+                            ovata</h3>
+                        <p class="produto__preco">R$ 20,00</p>
+                        <a href="" class="produto_comprar">Comprar<span class="produto__comprar--item"></span></a>
+                    </div>
+                </li>
+                <li class="produto">
+                    <img class="produto__imagem" src="./Assets/img/produto-04.png" alt="Foto do produto"></imag>
+                    <div class="produto__conteudo">
+                        <h3 class="produto__titulo titulo--destaque">Cyperus
+                            rotundus</h3>
+                        <p class="produto__preco">R$ 20,00</p>
+                        <a href="" class="produto_comprar">Comprar<span class="produto__comprar--item"></span></a>
+                    </div>
+                </li>
+                <li class="produto">
+                    <img class="produto__imagem" src="./Assets/img/produto-05.png" alt="Foto do produto"></imag>
+                    <div class="produto__conteudo">
+                        <h3 class="produto__titulo titulo--destaque">Delairea
+                            odorata</h3>
+                        <p class="produto__preco">R$ 20,00</p>
+                        <a href="" class="produto_comprar">Comprar<span class="produto__comprar--item"></span></a>
+                    </div>
+                </li>
+                <li class="produto">
+                    <img class="produto__imagem" src="./Assets/img/produto-06.png" alt="Foto do produto"></imag>
+                    <div class="produto__conteudo">
+                        <h3 class="produto__titulo titulo--destaque">Datura
+                            metel</h3>
+                        <p class="produto__preco">R$ 20,00</p>
+                        <a href="" class="produto_comprar">Comprar<span class="produto__comprar--item"></span></a>
+                    </div>
                 </li>
             </ul>
-        </article>
-        <article class="produto">
-            <img src="Assets/img/produto-01.png" alt="Foto do produto" class="produto__imagem">
-            <div class="produto__conteudo">
-                <h3 class="produto__titulo titulo--destaque">Ajuga reptans</h3>
-                <p class="produto__preco">R$ 20,00</p>
-                <a href="#" class="produto__comprar">Comprar<span class="produto__comprar--icone"></span></a>
-            </div>
-        </article>
-        <article class="cartao-de-video">
-            <div class="cartao-de-video__video"><img src="https://picsum.photos/278/252" alt="Banner do vídeo"></div>
-            <h3 class="cartao-de-video__titulo">Vídeo XYZ</h3>
-            <p>Publicado em Março de 2019</p>
-        </article>
+        </section>
+        <section class="container">
+            <h2 class="titulo alinhamento--meio">
+             Veja aqui nossos   
+             <span class="titulo--destaque">vídeos</span>
+            </h2>
+            <ul>
+                <li class="cartao-de-video container">
+                    <div class="cartao-de-video__video"><img src="https://picsum.photos/278/252" alt="Capa de vídeo"></div>
+                    <h3 class="cartao-de-video__titulo">Vídeo 1</h3>
+                    <p>Publicado em Março de 2019</p>
+                </li>
+                <li class="cartao-de-video container">
+                    <div class="cartao-de-video__video"><img src="https://picsum.photos/278/252" alt="Capa de vídeo"></div>
+                    <h3 class="cartao-de-video__titulo">Vídeo 2</h3>
+                    <p>Publicado em Março de 2019</p>
+                </li>
+                <li class="cartao-de-video container">
+                    <div class="cartao-de-video__video"><img src="https://picsum.photos/278/252" alt="Capa de vídeo"></div>
+                    <h3 class="cartao-de-video__titulo">Vídeo 3</h3>
+                    <p>Publicado em Março de 2019</p>
+                </li>
+                <li class="cartao-de-video container">
+                    <div class="cartao-de-video__video"><img src="https://picsum.photos/278/252" alt="Capa de vídeo"></div>
+                    <h3 class="cartao-de-video__titulo">Vídeo 4</h3>
+                    <p>Publicado em Março de 2019</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer class="container rodape">
         <img src="./Assets/img/logo.svg" alt="Logo Casa verde" class="rodape__logo">
         <ul class="rodape__social">
-            <li><a href="#" class="rodape__social--midia" title="Facebook"><img src="./Assets/img/icones/facebook.png" alt="Icone do Facebook"></a></li>
-            <li><a href="#" class="rodape__social--midia" title="Twitter"><img src="./Assets/img/icones/twitter.svg" alt="Icone do Twitter"></a></li>
-            <li><a href="#" class="rodape__social--midia" title="Instagram"><img src="./Assets/img/icones/instagram.png" alt="Icone do Instagram"></a></li>
+            <li><a href="#" class="rodape__social--midia" title="Facebook"><img src="./Assets/img/icones/facebook.png"
+                        alt="Icone do Facebook"></a></li>
+            <li><a href="#" class="rodape__social--midia" title="Twitter"><img src="./Assets/img/icones/twitter.svg"
+                        alt="Icone do Twitter"></a></li>
+            <li><a href="#" class="rodape__social--midia" title="Instagram"><img src="./Assets/img/icones/instagram.png"
+                        alt="Icone do Instagram"></a></li>
         </ul>
         <address class="rodape__unidade texto">
             <span class="rodape__unidade-titulo">Rio de Janeiro</span>
